--- a/www.nass.gov.ng/1c2d95329d2716f9b0f7a3851c246b13bd23e8ce.yml
+++ b/www.nass.gov.ng/1c2d95329d2716f9b0f7a3851c246b13bd23e8ce.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 09:05:55 GMT
+    - Sun, 12 Aug 2018 05:20:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=SLl%2CYb4Ykt0Ju8rKGTv9n2; path=/
+    - PHPSESSID=YQ4dfz7hKN0tKSJ%2CsfVs91; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 09:05:55 GMT
+recorded_at: Sun, 12 Aug 2018 05:20:40 GMT
