--- a/www.nass.gov.ng/f93571331bd35a0dfe7388e17cf2c6d0b1a2399c.yml
+++ b/www.nass.gov.ng/f93571331bd35a0dfe7388e17cf2c6d0b1a2399c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 09:09:46 GMT
+    - Sun, 12 Aug 2018 05:23:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ab15SpYKfoT%2CBMBi2FiTd1; path=/
+    - PHPSESSID=ZuEtSAlKjSD8XgIdnpRkr2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 09:09:47 GMT
+recorded_at: Sun, 12 Aug 2018 05:23:44 GMT
