--- a/www.nass.gov.ng/c02324c012680cdbf0bf9f555204bc8476b225c0.yml
+++ b/www.nass.gov.ng/c02324c012680cdbf0bf9f555204bc8476b225c0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 09:12:24 GMT
+    - Sun, 12 Aug 2018 05:26:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kiNx%2CADm8KOGKHjevmUFL3; path=/
+    - PHPSESSID=hJNwgTOIUm8Tttaq-v5Je1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 09:12:24 GMT
+recorded_at: Sun, 12 Aug 2018 05:26:20 GMT
