--- a/www.nass.gov.ng/a1a4efd6ed11b01cec4799c3cfdd89006f5ef079.yml
+++ b/www.nass.gov.ng/a1a4efd6ed11b01cec4799c3cfdd89006f5ef079.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 09:59:53 GMT
+    - Sun, 12 Aug 2018 06:12:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CCNj2h8wZXjt9a4oEh9hK2; path=/
+    - PHPSESSID=3tIe-lYMPWZDbncHIVm4U1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 09:59:53 GMT
+recorded_at: Sun, 12 Aug 2018 06:12:23 GMT
