--- a/www.nass.gov.ng/f5d28a912f857545a05e601947f8f53cfb4a1245.yml
+++ b/www.nass.gov.ng/f5d28a912f857545a05e601947f8f53cfb4a1245.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 10:07:09 GMT
+    - Sun, 12 Aug 2018 06:18:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=m1bFGomQ8KendWehIzGpL0; path=/
+    - PHPSESSID=fjHvkbEYCIhuQWaXz%2CQA53; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 10:07:09 GMT
+recorded_at: Sun, 12 Aug 2018 06:18:38 GMT
