--- a/www.nass.gov.ng/9cb9f95b8b58299e0d288da7bd207cb97c5e8706.yml
+++ b/www.nass.gov.ng/9cb9f95b8b58299e0d288da7bd207cb97c5e8706.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 10:09:03 GMT
+    - Sun, 12 Aug 2018 06:19:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=56uygT2GSwdHN98Lv-eA40; path=/
+    - PHPSESSID=z%2Cr3CoRv0H1M22bPV1EAB2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 10:09:03 GMT
+recorded_at: Sun, 12 Aug 2018 06:19:24 GMT
