--- a/www.nass.gov.ng/435c0e360c287ddbb7d6570d622a6ee787501069.yml
+++ b/www.nass.gov.ng/435c0e360c287ddbb7d6570d622a6ee787501069.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 10:37:20 GMT
+    - Sun, 12 Aug 2018 06:45:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HRm2XkQbxjeOYxOX1ahW13; path=/
+    - PHPSESSID=v02jHuw%2CyHEtmyDmUWN%2CA0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 10:37:20 GMT
+recorded_at: Sun, 12 Aug 2018 06:45:04 GMT
