--- a/www.nass.gov.ng/ef85ea08deed02805445acc19a68bf570b5fa0cc.yml
+++ b/www.nass.gov.ng/ef85ea08deed02805445acc19a68bf570b5fa0cc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 10:44:47 GMT
+    - Sun, 12 Aug 2018 06:52:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=84iPIWK5qCAwCh%2CSWKIVR2; path=/
+    - PHPSESSID=2ykNtdIXh3%2C7k6RnqhBde3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 10:44:47 GMT
+recorded_at: Sun, 12 Aug 2018 06:52:14 GMT
