--- a/www.nass.gov.ng/035711a3a3b0484fcb7f2f8093c2780b78b214c7.yml
+++ b/www.nass.gov.ng/035711a3a3b0484fcb7f2f8093c2780b78b214c7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 10:49:26 GMT
+    - Sun, 12 Aug 2018 06:57:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=soQA%2CsrUBHnz3KE964gVp3; path=/
+    - PHPSESSID=LDhMe14wEMtnCmvlm3p480; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 10:49:27 GMT
+recorded_at: Sun, 12 Aug 2018 06:57:25 GMT
