--- a/www.nass.gov.ng/dd0f99483051557e277f98b4a825665c27ed33d6.yml
+++ b/www.nass.gov.ng/dd0f99483051557e277f98b4a825665c27ed33d6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 10:50:33 GMT
+    - Sun, 12 Aug 2018 06:58:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KPA2lHGe3-W0qwDiHWOh-3; path=/
+    - PHPSESSID=2Rv05SNO%2C4iISH9aBhW%2CB1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 10:50:34 GMT
+recorded_at: Sun, 12 Aug 2018 06:58:11 GMT
