--- a/www.nass.gov.ng/3c845c64c673e591735805e30c5b8d7145c235b6.yml
+++ b/www.nass.gov.ng/3c845c64c673e591735805e30c5b8d7145c235b6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 11:01:22 GMT
+    - Sun, 12 Aug 2018 07:08:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HUFmh9ACs51hP%2CQg7TzOp1; path=/
+    - PHPSESSID=%2Cy0E0vAYrujygY0-Viclz2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 11:01:22 GMT
+recorded_at: Sun, 12 Aug 2018 07:08:51 GMT
