--- a/www.nass.gov.ng/496c0b3e62ceafe38789906b5d9a1501a4b241e3.yml
+++ b/www.nass.gov.ng/496c0b3e62ceafe38789906b5d9a1501a4b241e3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 11:07:18 GMT
+    - Sun, 12 Aug 2018 07:15:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=dDVj0qSaYIkdKQTi93BCx1; path=/
+    - PHPSESSID=nbqPmDBnbHb%2CiKK6QT0%2CL2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 11:07:18 GMT
+recorded_at: Sun, 12 Aug 2018 07:15:10 GMT
