--- a/www.nass.gov.ng/0358ff22b13a43967c1d2c770fd76c74bcdbf9af.yml
+++ b/www.nass.gov.ng/0358ff22b13a43967c1d2c770fd76c74bcdbf9af.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 11:19:41 GMT
+    - Sun, 12 Aug 2018 07:29:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=--nXamFkX-UC80Ym6dw2%2C3; path=/
+    - PHPSESSID=Nr%2C0X58XLMplVAUOp3QFq1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 11:19:41 GMT
+recorded_at: Sun, 12 Aug 2018 07:30:00 GMT
