--- a/www.nass.gov.ng/e60b8da6b2c1c3f95eae4ead85f0f31539a1fca6.yml
+++ b/www.nass.gov.ng/e60b8da6b2c1c3f95eae4ead85f0f31539a1fca6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 11:27:40 GMT
+    - Sun, 12 Aug 2018 07:37:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=NXI-CTSz9poMWmOkF-Fwx0; path=/
+    - PHPSESSID=oRyCEOy9Dl%2CX4CrRk9LOt2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 11:27:40 GMT
+recorded_at: Sun, 12 Aug 2018 07:37:51 GMT
