--- a/www.nass.gov.ng/3bdb36576d8d0a3b8b9e3950d0f641d907652ea3.yml
+++ b/www.nass.gov.ng/3bdb36576d8d0a3b8b9e3950d0f641d907652ea3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 11:28:40 GMT
+    - Sun, 12 Aug 2018 07:39:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KUhNFZ3C%2Cq7%2CMjYOH5bed0; path=/
+    - PHPSESSID=UYijqdN7TCCr0iMHkkDAy2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 11:28:40 GMT
+recorded_at: Sun, 12 Aug 2018 07:39:33 GMT
