--- a/www.nass.gov.ng/70b2336e6229219bd50f26af347e66f79fa31b56.yml
+++ b/www.nass.gov.ng/70b2336e6229219bd50f26af347e66f79fa31b56.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 11:40:54 GMT
+    - Sun, 12 Aug 2018 07:50:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=BHg8n2n1Zq5qFK8h5-BTG2; path=/
+    - PHPSESSID=q2oIcglS7%2Cn8JECNAo0Mh1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 11:40:54 GMT
+recorded_at: Sun, 12 Aug 2018 07:50:15 GMT
