--- a/www.nass.gov.ng/887e5520b512b28957706de5b0cc8103ee45ba57.yml
+++ b/www.nass.gov.ng/887e5520b512b28957706de5b0cc8103ee45ba57.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 11:41:43 GMT
+    - Sun, 12 Aug 2018 07:51:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FYmozudpfusp7LLCF1DB11; path=/
+    - PHPSESSID=5V2mu2tSfXa-S40%2Ch5KMg2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 11:41:43 GMT
+recorded_at: Sun, 12 Aug 2018 07:51:00 GMT
