--- a/www.nass.gov.ng/88556bd0e840159ac9c15a946a553fec97046a88.yml
+++ b/www.nass.gov.ng/88556bd0e840159ac9c15a946a553fec97046a88.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 11:46:11 GMT
+    - Sun, 12 Aug 2018 07:55:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=q8DJAuaWo0upW-xqVdHyE0; path=/
+    - PHPSESSID=u1%2Cpz3X4stsUcFe9Z8lEB1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 11:46:11 GMT
+recorded_at: Sun, 12 Aug 2018 07:55:50 GMT
