--- a/www.nass.gov.ng/d23cb74ea7813ca33774660c74e8542d8e6048ab.yml
+++ b/www.nass.gov.ng/d23cb74ea7813ca33774660c74e8542d8e6048ab.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 11:51:03 GMT
+    - Sun, 12 Aug 2018 08:00:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=M-tWl5q%2CDI6z9TXcj0uNG0; path=/
+    - PHPSESSID=hNvXPQlYNk3FzdTXJ2csD2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 11:51:03 GMT
+recorded_at: Sun, 12 Aug 2018 08:00:05 GMT
