--- a/www.nass.gov.ng/6362bf0b264c101faa86bccf8a95eacd55ff0e0b.yml
+++ b/www.nass.gov.ng/6362bf0b264c101faa86bccf8a95eacd55ff0e0b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 11:57:30 GMT
+    - Sun, 12 Aug 2018 08:07:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=aWN9dTpKHTHBV9QciaX%2CA2; path=/
+    - PHPSESSID=PpttJPsMu48ll26yTf7Hl2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 11:57:31 GMT
+recorded_at: Sun, 12 Aug 2018 08:07:41 GMT
