--- a/www.nass.gov.ng/ca8472a0472d9d7c18dd4aee677b28540d8f3163.yml
+++ b/www.nass.gov.ng/ca8472a0472d9d7c18dd4aee677b28540d8f3163.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 12:00:47 GMT
+    - Sun, 12 Aug 2018 08:10:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=f6DBKYwY4eCgRXudkVzf43; path=/
+    - PHPSESSID=g%2CPAwcQ3RV%2CLqHbtWufsF1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 12:00:47 GMT
+recorded_at: Sun, 12 Aug 2018 08:10:49 GMT
