--- a/www.nass.gov.ng/f96c9591c33ea575579b2cb26aa956b37e2b6bb3.yml
+++ b/www.nass.gov.ng/f96c9591c33ea575579b2cb26aa956b37e2b6bb3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 12:02:34 GMT
+    - Sun, 12 Aug 2018 08:12:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-of6xgN2VUugwV1%2CMEGIo1; path=/
+    - PHPSESSID=NBw5wKl33C7TyJTJ6hOQZ2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 12:02:34 GMT
+recorded_at: Sun, 12 Aug 2018 08:12:33 GMT
