--- a/www.nass.gov.ng/e8c8853bb750cd38cc6b84c3aaa8947ab9679a39.yml
+++ b/www.nass.gov.ng/e8c8853bb750cd38cc6b84c3aaa8947ab9679a39.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 12:06:20 GMT
+    - Sun, 12 Aug 2018 08:16:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Cyu7lEcho%2CV1X0H8cZYiJ3; path=/
+    - PHPSESSID=W2RbyL5Smn%2CPg3nQ5F%2C5m0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 12:06:20 GMT
+recorded_at: Sun, 12 Aug 2018 08:16:22 GMT
