--- a/www.nass.gov.ng/de5254844cf8d346a1878728cb84aa920a2f7e26.yml
+++ b/www.nass.gov.ng/de5254844cf8d346a1878728cb84aa920a2f7e26.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 12:13:50 GMT
+    - Sun, 12 Aug 2018 08:21:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FinWeKyTYGoBZySsAhZ8m1; path=/
+    - PHPSESSID=w%2CCG66zb56L0A9BH%2CFXeh3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 12:13:50 GMT
+recorded_at: Sun, 12 Aug 2018 08:21:36 GMT
