--- a/www.nass.gov.ng/c0c7d860a1496e8261b249dece6c381d909892e2.yml
+++ b/www.nass.gov.ng/c0c7d860a1496e8261b249dece6c381d909892e2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 12:20:41 GMT
+    - Sun, 12 Aug 2018 08:27:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PRrNraoJMfsCMnDWXc51H3; path=/
+    - PHPSESSID=0pi6yQrUidj1Sex%2CGrdNg1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 12:20:41 GMT
+recorded_at: Sun, 12 Aug 2018 08:27:10 GMT
